docs: evaluation with demonstration

--- a/docs/bachelor/bibliography.bib
+++ b/docs/bachelor/bibliography.bib
@@ -383,3 +383,19 @@
   year = {2023},
   copyright = {Creative Commons Attribution 4.0 International}
 }
+
+@misc{githubCyfrinaderyn,
+	author = {},
+	title = {{G}it{H}ub - {C}yfrin/aderyn: {A}deryn {R}ust-based {S}olidity {A}{S}{T} analyzer. --- github.com},
+	howpublished = {\url{https://github.com/Cyfrin/aderyn}},
+	year = {},
+	note = {[Accessed 16-05-2024]},
+}
+
+@misc{githubCryticslither,
+	author = {},
+	title = {{G}it{H}ub - crytic/slither: {S}tatic {A}nalyzer for {S}olidity and {V}yper --- github.com},
+	howpublished = {\url{https://github.com/crytic/slither}},
+	year = {},
+	note = {[Accessed 16-05-2024]},
+}
