--- a/docs/bachelor/main.tex
+++ b/docs/bachelor/main.tex
@@ -82,6 +82,8 @@
 
     \include{content/implementation}
 
+    \include{content/evaluation}
+
     \include{content/conclusion}
 
     \ifx\FIITlagEN\undefined
