--- a/docs/bachelor/packages.tex
+++ b/docs/bachelor/packages.tex
@@ -4,9 +4,9 @@
 \usepackage[\FIITlanguage]{babel}
 \usepackage[a4paper]{geometry}
 \usepackage[
-  left = \glqq,% 
-  right = \grqq,% 
-  leftsub = \glq,% 
+  left = \glqq,%
+  right = \grqq,%
+  leftsub = \glq,%
   rightsub = \grq%
 ]{dirtytalk}
 \usepackage[parfill]{parskip}
@@ -24,6 +24,14 @@
 \usepackage{lscape}
 \usepackage{afterpage}
 \usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,
+    urlcolor=cyan,
+    pdftitle={Overleaf Example},
+    pdfpagemode=FullScreen,
+    }
 \usepackage{bera}
 \usepackage{listings}
 \usepackage{xcolor}
