--- a/docs/bachelor/pages/annotation.tex
+++ b/docs/bachelor/pages/annotation.tex
@@ -16,7 +16,7 @@
 
     \FIITthesisSK: \FIITtitleSK
 
-    Vedúci projektu: \FIITsupervisor
+    Vedúci bakalárskej práce: \FIITsupervisor
 
     \FIITdateSK
 \end{minipage}
@@ -40,8 +40,6 @@ na riešenie problémov súkromia, ponúkajúc riešenie vo forme konceptuálnej
 implementácie schémy tajných adries s použitím ZKPs.
 
 \newpage{}\thispagestyle{empty}\medskip{}
-
-\emptypage
 
 % Annotation in English
 \thispagestyle{empty}
