--- a/docs/bachelor/pages/declaration.tex
+++ b/docs/bachelor/pages/declaration.tex
@@ -1,20 +1,12 @@
 \thispagestyle{empty}
 
+
+\section*{Čestné prehlásenie}
+
 \vspace*{\fill}
 
-\ifx\FIITlagEN\undefined
-\section*{Čestné prehlásenie}
-\else
-\section*{Declaration of honor}
-\fi
+Čestne vyhlasujem, že som túto prácu vypracoval(a) samostatne, na základe konzultácií
+a s použitím uvedenej literatúry.
 
-\lipsum[3]
-
-\ifx\FIITlagEN\undefined
 \FIITsignPlaceSK \FIITsignDate
-\else
-\FIITsignPlace \FIITsignDate
-\fi
 \hspace*{\fill} \signaturespace{5cm}{\FIITauthor}
-
-\emptypage
