--- a/docs/bachelor/pages/digital_medium.tex
+++ b/docs/bachelor/pages/digital_medium.tex
@@ -8,7 +8,7 @@
 \fi
 
 \pagenumbering{arabic}
-\renewcommand*{\thepage}{C-\arabic{page}}
+\renewcommand*{\thepage}{B-\arabic{page}}
 
 \ifx\FIITlagEN\undefined
     \par Evidenčné číslo práce v informačnom systéme: \FIITevidenceNumber
@@ -36,7 +36,7 @@
 %     /praca.pdf          pdf hlavná časť záverečnej práce
 %     /prilohy.pdf        pdf textové prílohy záverečnej práce
 
-% \end{minted}
+\end{minted}
 
 % only if digital medium contents exceed 1 GB
 % \par Digitálna časť práce má veľkosť 3.75 GB, kvôli čomu je uložená v systéme G Suite for Education.
