--- a/docs/bachelor/pages/time_schedule.tex
+++ b/docs/bachelor/pages/time_schedule.tex
@@ -8,7 +8,7 @@
 \fi
 
 \pagenumbering{arabic}
-\renewcommand*{\thepage}{B-\arabic{page}}
+\renewcommand*{\thepage}{A-\arabic{page}}
 
 \section{Winter semester}
 
