--- a/docs/bachelor/values.tex
+++ b/docs/bachelor/values.tex
@@ -21,7 +21,7 @@
 \newcommand{\FIITsupervisor}[0] {Ing. Kristián Košťál PhD.}
 \newcommand{\FIITevidenceNumber}[0] {FIIT-16768-116160}
 \newcommand{\FIITdate}[0] {May 2024}
-\newcommand{\FIITdateSK}[0] {May 2024}
+\newcommand{\FIITdateSK}[0] {Máj 2024}
 \newcommand{\FIITstudyProgram}[0] {Informatics}
 \newcommand{\FIITstudyProgramSK}[0] {Informatika}
 \newcommand{\FIITstudyField}[0] {Computer Science}
@@ -30,5 +30,5 @@
 \newcommand{\FIITinstituteSK}[0] {Ústav počítačového inžinierstva a aplikovanej informatiky}
 \newcommand{\FIITsignPlace}[0] {In Bratislava, }
 \newcommand{\FIITsignPlaceSK}[0] {V Bratislave, }
-\newcommand{\FIITsignDate}[0] {25.12.2023}
+\newcommand{\FIITsignDate}[0] {20.5.2024}
 \newcommand{\FIITArchiveName}[0] {BP\_LukasCastven.zip}
