docs: start writing resume...

--- a/docs/bachelor/content/introduction.tex
+++ b/docs/bachelor/content/introduction.tex
@@ -68,6 +68,8 @@ implemented. Chapter \ref{chapter:security} discusses the security
 considerations of the ZKP stealth address scheme, listing the assumptions made
 and potential vulnerabilities. Chapter \ref{chapter:implementation} outlines
 the implementation details of the scheme, covering the tools and technologies
-used.Finally, Chapter \ref{chapter:conclusion} concludes the thesis by
+used. Next chapter, Evaluation \ref{chapter:evaluation} analyzes proposed
+implementation from different angles, such as gas analysis or security analysis.
+Finally, Chapter \ref{chapter:conclusion} concludes the thesis by
 summarizing the findings and proposing potential avenues for future work.
 
