--- a/docs/bachelor/pages/resume.tex
+++ b/docs/bachelor/pages/resume.tex
@@ -6,4 +6,42 @@
 \markboth{Resumé}{Resumé}
 \addcontentsline{toc}{chapter}{Resumé} 
 
+Táto bakalárska práca skúma aplikáciu dôkazov s nulovým vedomím (ZKPs) v
+blockchainoch. Dôkazy s nulovým vedomím sú kryptografická metóda, ktorá
+umožňuje overenie dát bez odhalenia samotných dát, čo je ideálne pre
+bezpečné a súkromné aplikácie v blockchainoch.
+
+Práca sa zaoberá riešením problému nedostatočného súkromia v
+blockchainových transakciách. Blockchainy ako Ethereum ponúkajú
+transparentnosť a bezpečnosť, verejná povaha transakcií odhaľuje identity
+používateľov a ich finančné aktivity, čo vyvoláva značné obavy o súkromie.
+Táto práca predstavuje nové riešenie tohto problému pomocou dôkazov s
+nulovým vedomím na vytvorenie schémy tajných adries.
+
+\section{Úvod}
+
+V úvode  je predstavený koncept dôkazov s nulovým vedomím (ZKPs), čo je
+kryptografická metóda umožňujúca overenie pravdivosti tvrdenia bez
+odhalenia jeho obsahu. Popisuje históriu ZKPs, počnúc ich konceptom v roku
+1989, a ich vývoj smerom k neinteraktívnym dôkazom. Tieto dôkazy umožňujú
+overenie bez nutnosti priamej interakcie medzi stranami. Kapitola tiež
+zdôrazňuje význam tajných adries v blockchainoch, ktoré umožňujú
+odosielanie aktív bez odhalenia identity príjemcu. Použitie ZKPs v
+kontexte tajných adries zvyšuje súkromie tým, že umožňuje príjemcovi
+preukázať vlastníctvo adresy bez prezradenia svojej identity.
+
+Analýza (\ref{chapter:analysis}) opisuje kryptografické princípy za ZKPs a
+ich využitie v blockchainoch, najmä v schéme tajných adries. V kapitole
+Súvisiaca práca (\ref{chapter:related}) sa skúma existujúci výskum a projekty
+týkajúce sa ZKPs a tajných adries. Návrh riešenia (\ref{chapter:solution}) opisuje návrh
+konceptu schémy tajných adries využívajúcej ZKPs. V Diskusii o
+bezpečnosti (\ref{chapter:security}) sa rozoberajú bezpečnostné aspekty navrhovanej schémy a jej
+predpoklady. Kapitola Implementácia (\ref{chapter:implementation}) poskytuje podrobnosti o implementácii
+schémy, použitých nástrojoch a technológiách. Kapitola Evaulacia (\ref{chapter:evaluation}) analyzuje
+navrhnutú implementáciu z rôznych uhlov, ako napríklad analýza poplatkov, alebo
+bezpečnostná analýza.
+V kapitole Vyhodnotenie (\ref{chapter:conclusion}) sa
+vyhodnocuje implementácia schémy a diskutujú sa jej výsledky. Záver zhŕňa
+zistenia práce a navrhuje potenciálne smery pre budúci výskum.
+
 \end{otherlanguage}
