docs: continue with resume

--- a/docs/bachelor/content/implementation.tex
+++ b/docs/bachelor/content/implementation.tex
@@ -29,8 +29,8 @@ The interaction between components, and users is depicted in Figure \ref{fig:com
 \begin{figure}[h!]
     \centering
     \includegraphics[width=\textwidth]{assets/images/implementation-flow.png}
-    \caption{Component diagram}
-    \label{fig:implementation-diagram}
+    \caption{Interaction flow}
+    \label{fig:interaction-flow}
     \vspace{0.5cm}
 \end{figure}
 
