docs: add summary to time schedule

--- a/docs/bachelor/pages/time_schedule.tex
+++ b/docs/bachelor/pages/time_schedule.tex
@@ -40,3 +40,17 @@
 12\textsuperscript{th}-13\textsuperscript{th} week  & Revision of final document  \\
 \hline
 \end{tabular}
+
+The beginning of this work started in different direction. First application of
+ZKPs in the ZK-EVM or in ZK-Rollups was being researched and considered. However,
+after discussion with supervisor, these themes were considered too advanced and
+a more suitable theme for Stealth Addresses with ZKP was chosen. The remainder
+of the winter semester was split between researching how a stealth address scheme
+with ZKPs can be designed and implemented, and then the solution design was proposed.
+
+Start of the summer semester was more focused on learning CIRCOM for implementing
+the a circuit needed to generate and verify ZKPs. Then the main part of the semester
+was spent implementing the ZKP circuit, implementing set of smart contracts
+and finally a proof of concept browser wallet supporting implemented scheme.
+Last four weeks were spent on testing, fixing bugs and revising this document.
+
