feat: doc for attachments

--- a/docs/bachelor/packages.tex
+++ b/docs/bachelor/packages.tex
@@ -19,6 +19,7 @@
 \usepackage{setspace}
 \usepackage{tabularx}
 \usepackage{fancyhdr}
+% Used to create the attachment doc \addto\captionsenglish{\renewcommand{\chaptername}{Attachment}}
 \usepackage[backend=bibtex,sorting=none]{biblatex}
 \usepackage{listing}
 \usepackage{lscape}
